--- a/styles/style.css
+++ b/styles/style.css
@@ -106,7 +106,7 @@ p {
   margin-bottom: 20px;
 }
 
-.importance-text, .todo-title {
+.todo-title {
   color: #6D6E71;
   font-family: 'Roboto Slab', serif;
   font-size: 24px;
@@ -117,7 +117,7 @@ p {
   margin-top: 10px;
 }
 
-.idea-card {
+.todo-card {
   border-bottom: 2px solid #D1D2D4;
   display:flex;
   flex-direction: column;
@@ -218,13 +218,13 @@ p {
   height: 26px;
 }
 
-/*IDEA CARD CONTAINER*/
+/*TODO CARD CONTAINER*/
 
 #search-input {
   margin: 18px 0px 20px 0px;
 }
 
-#idea-box-section {
+#todo-box-section {
   align-items: center;
   background-color: #FFFFFF;
   display:flex;
@@ -241,7 +241,7 @@ p {
   /*position: relative;*/
 }
 
-#idea-card-quality-container {
+#todo-card-quality-container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -286,7 +286,7 @@ p {
   #save-button,
   #show-complete,
   #sort,
-  .idea-card,
+  .todo-card,
   .single-line-input {
     width: 480px;
   }
